@@ -65,7 +65,7 @@ AC_CHECK_HEADERS(limits.h string.h unistd.h stdarg.h)
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_STAT
-AC_C_BIGENDIAN
+AG_BYTE_ORDER
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
